--- a/client/index.html
+++ b/client/index.html
@@ -12,10 +12,14 @@
 		<link rel="stylesheet" href="css/styles.css">
 
 		<script src="js/angular.min.js"></script>
+		<script src="js/react.js"></script>
+    	<script src="js/react-dom.js"></script>
+    	<script src="js/browser.min.js"></script>
 		<!--<script src="js/ui-bootstrap-tpls-0.14.2.min.js"></script>-->
 
 		<script src="data/example.js"></script>
 		<script src="js/app.js"></script>
+		<script type="text/babel" src="js/reactapp.js"></script>
 	</head>
 
 	<body ng-app="liberatorApp" ng-controller="bookshelfCtrl" role="document">
@@ -24,6 +28,11 @@
 			<a href="#" class="header-brand">Liberator - Free Your Digital Files!</a>
 		</div>
 
+		<div id="content">
+			<!-- react in here? -->
+		</div>
+
+<!--
 		<div class="board-main-content">
 			<div class="board-header">
 				<h2 class="board-name">Al's Books</h2>
@@ -46,6 +55,6 @@
 				</div>
 			</div>
 		</div>
-
+-->
 	</body>
 </html>
