--- a/client/index.html
+++ b/client/index.html
@@ -15,10 +15,13 @@
 		<script src="js/react.js"></script>
     	<script src="js/react-dom.js"></script>
     	<script src="js/browser.min.js"></script>
+
 		<!--<script src="js/ui-bootstrap-tpls-0.14.2.min.js"></script>-->
 
 		<script src="data/example.js"></script>
 		<script src="js/app.js"></script>
+
+		<script type="text/babel" src="js/lightbox.js"></script>
 		<script type="text/babel" src="js/reactapp.js"></script>
 	</head>
 
@@ -29,8 +32,10 @@
 		</div>
 
 		<div id="content">
-			<!-- react in here? -->
+			<!-- react in here -->
 		</div>
+
+
 
 <!--
 		<div class="board-main-content">
