--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,9 @@
     	<script src="js/react-dom.js"></script>
     	<script src="js/browser.min.js"></script>
 
+    	<script src="js/epub/zip.min.js"></script>
+    	<script src="js/epub/epub.min.js"></script>
+
 		<!--<script src="js/ui-bootstrap-tpls-0.14.2.min.js"></script>-->
 
 		<script src="data/example.js"></script>
@@ -34,8 +37,6 @@
 		<div id="content">
 			<!-- react in here -->
 		</div>
-
-
 
 <!--
 		<div class="board-main-content">
