--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
 		<!--<link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
 		<link rel="stylesheet" href="css/styles.css">
 
-		<script src="js/angular.min.js"></script>
+		<script src="js/lodash.min.js"></script>
 		<script src="js/react.js"></script>
     	<script src="js/react-dom.js"></script>
     	<script src="js/browser.min.js"></script>
 
     	<script src="js/epub/zip.min.js"></script>
-    	<script src="js/epub/epub.min.js"></script>
+    	<script src="js/epub/epub.js"></script>
 
 		<!--<script src="js/ui-bootstrap-tpls-0.14.2.min.js"></script>-->
 
 		<script src="data/example.js"></script>
-		<script src="js/app.js"></script>
 
 		<script type="text/babel" src="js/lightbox.js"></script>
 		<script type="text/babel" src="js/reactapp.js"></script>
