getting ready for a user test

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<body ng-app="liberatorApp" ng-controller="bookshelfCtrl" role="document">
 
 		<div id="header">
-			<a href="#" class="header-brand">Liberator - Free Your Digital Files!</a>
+			<a href="#" class="header-brand">Liberator - Find and Read interesting books</a>
 		</div>
 
 		<div id="content">
