--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 		<!--<meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">-->
 		<title>Liberator</title>
 
-		<!--<link rel="stylesheet" href="css/bootstrap.min.css">-->
-		<!--<link rel="stylesheet" href="css/bootstrap-theme.min.css">-->
 		<link rel="stylesheet" href="css/styles.css">
 
 		<script src="js/lodash.min.js"></script>
@@ -27,7 +25,7 @@
 		<script type="text/babel" src="js/reactapp.js"></script>
 	</head>
 
-	<body ng-app="liberatorApp" ng-controller="bookshelfCtrl" role="document">
+	<body>
 
 		<div id="header">
 			<a href="#" class="header-brand">Liberator - Find and Read interesting books</a>
