--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
 
 		<script type="text/babel" src="js/lightbox.js"></script>
 		<script type="text/babel" src="js/reactapp.js"></script>
+
+		<!-- Hotjar Tracking Code for app.recoroll.com -->
+		<script>
+		    (function(h,o,t,j,a,r){
+		        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+		        h._hjSettings={hjid:97830,hjsv:5};
+		        a=o.getElementsByTagName('head')[0];
+		        r=o.createElement('script');r.async=1;
+		        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+		        a.appendChild(r);
+		    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+		</script>
 	</head>
 
 	<body>
