js re-org, added routing

--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
 
 		<link rel="stylesheet" href="css/styles.css">
 
-		<script src="js/lodash.min.js"></script>
-		<script src="js/react.js"></script>
-    	<script src="js/react-dom.js"></script>
-    	<script src="js/browser.min.js"></script>
+		<script src="js/lib/lodash.min.js"></script>
+		<script src="js/lib/react.js"></script> <!-- react component lib -->
+    	<script src="js/lib/react-dom.js"></script> <!-- react-dom lib -->
+    	<script src="js/lib/browser.min.js"></script> <!-- JSX parser -->
+
+    	<script src="js/lib/lightrouter.js"></script> 
 
     	<script src="js/epub/zip.min.js"></script>
     	<script src="js/epub/epub.js"></script>
 
-		<!--<script src="js/ui-bootstrap-tpls-0.14.2.min.js"></script>-->
-
+    	<!-- data for the react components -->
 		<script src="data/example.js"></script>
 
-		<script type="text/babel" src="js/lightbox.js"></script>
-		<script type="text/babel" src="js/reactapp.js"></script>
+		<script type="text/babel" src="js/react_lightbox_components.js"></script>
+		<script type="text/babel" src="js/react_board_components.js"></script>
+		<script type="text/babel" src="js/app.js"></script>
 
 		<!-- Hotjar Tracking Code for app.recoroll.com -->
 		<script>
