adding gutenberg picks

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     	<script src="js/epub/epub.js"></script>
 
     	<!-- data for the react components -->
-		<script src="data/example.js"></script>
+		<script src="data/gutenberg.js"></script>
 
 		<script type="text/babel" src="js/react_lightbox_components.js"></script>
 		<script type="text/babel" src="js/react_board_components.js"></script>
