--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     	<script src="js/lib/browser.min.js"></script> <!-- JSX parser -->
 
     	<script src="js/lib/lightrouter.js"></script> 
+    	<script src="js/lib/svg-injector.min.js"></script> 
+    	<script src="js/lib/nanoajax.min.js"></script> 
 
     	<script src="js/epub/zip.min.js"></script>
     	<script src="js/epub/epub.js"></script>
@@ -22,6 +24,7 @@
     	<!-- data for the react components -->
 		<script src="data/gutenberg.js"></script>
 
+		<script type="text/babel" src="js/react_page_components.js"></script>
 		<script type="text/babel" src="js/react_lightbox_components.js"></script>
 		<script type="text/babel" src="js/react_board_components.js"></script>
 		<script type="text/babel" src="js/app.js"></script>
@@ -40,10 +43,6 @@
 	</head>
 
 	<body>
-
-		<div id="header">
-			<a href="#" class="header-brand">Liberator - Find and Read interesting books</a>
-		</div>
 
 		<div id="content">
 			<!-- react in here -->
