allowed cross domain sign in of users

--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
     	<script src="js/lib/lightrouter.js"></script> 
     	<script src="js/lib/svg-injector.min.js"></script> 
     	<script src="js/lib/nanoajax.min.js"></script> 
+    	<script src="js/lib/js.cookie.js"></script> 
 
     	<script src="js/epub/zip.min.js"></script>
     	<script src="js/epub/epub.js"></script>
-
-    	<!-- data for the react components -->
-		<script src="data/gutenberg.js"></script>
 
 		<script type="text/babel" src="js/react_page_components.js"></script>
 		<script type="text/babel" src="js/react_lightbox_components.js"></script>
