--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     	<script src="js/epub/zip.min.js"></script>
     	<script src="js/epub/epub.js"></script>
 
+    	<script type="text/javascript" src="js/CurrentUser.js"></script>
 		<script type="text/babel" src="js/react_page_components.js"></script>
 		<script type="text/babel" src="js/react_lightbox_components.js"></script>
 		<script type="text/babel" src="js/react_board_components.js"></script>
