--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<script src="js/lib/lodash.min.js"></script>
 		<script src="js/lib/react.js"></script> <!-- react component lib -->
     	<script src="js/lib/react-dom.js"></script> <!-- react-dom lib -->
-    	<script src="js/lib/browser.min.js"></script> <!-- JSX parser -->
+    	<!--<script src="js/lib/browser.min.js"></script>--> <!-- JSX parser -->
 
     	<script src="js/lib/lightrouter.js"></script> 
     	<script src="js/lib/svg-injector.min.js"></script> 
@@ -22,10 +22,7 @@
     	<script src="js/epub/zip.min.js"></script>
     	<script src="js/epub/epub.js"></script>
 
-		<script type="text/babel" src="js/react_page_components.js"></script>
-		<script type="text/babel" src="js/react_lightbox_components.js"></script>
-		<script type="text/babel" src="js/react_board_components.js"></script>
-		<script type="text/babel" src="js/app.js"></script>
+    	<script type="text/javascript" src="js/CurrentUser.js"></script>
 
 		<!-- Hotjar Tracking Code for app.recoroll.com -->
 		<script>
@@ -38,18 +35,6 @@
 		        a.appendChild(r);
 		    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
 		</script>
-
-		<!-- Google analytics tracking -->
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-72928010-1', 'auto');
-		  ga('send', 'pageview');
-
-		</script>
 	</head>
 
 	<body>
@@ -57,6 +42,12 @@
 		<div id="content">
 			<!-- react in here -->
 		</div>
+
+		<!-- jsx files -->
+		<script type="text/javascript" src="js/bin/react_page_components.js"></script>
+		<script type="text/javascript" src="js/bin/react_lightbox_components.js"></script>
+		<script type="text/javascript" src="js/bin/react_board_components.js"></script>
+		<script type="text/javascript" src="js/bin/app.js"></script>
 
 	</body>
 </html>
