added the email signup landing page

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 		</div>
 
 		<!-- jsx files -->
+		<script type="text/javascript" src="js/bin/react_reusable_components.js"></script>
 		<script type="text/javascript" src="js/bin/react_page_components.js"></script>
 		<script type="text/javascript" src="js/bin/react_lightbox_components.js"></script>
 		<script type="text/javascript" src="js/bin/react_board_components.js"></script>
