adjusting meta info and copy

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!--<meta name="viewport" content="initial-scale=1,user-scalable=no,maximum-scale=1,width=device-width">-->
-		<title>Liberator</title>
+
+		<meta name="description" content="Discover the book recommendations of the world's most inspiring people.  Do you want to make an impact?  Learn from the best artists, experts and leaders.">
+		<title>Book Recommendations from Inspiring People | Liberator</title>
 
 		<link rel="stylesheet" href="css/styles.css">
 
